# Day-Skies

./: Cargo.toml  Day.toml  README.md  build.rs
.github/workflows/: ci.yml
platform/android/: settings.gradle.kts
platform/android/app/: build.gradle.kts
platform/android/app/src/main/: AndroidManifest.xml
platform/ios/DayApp.xcodeproj/: project.pbxproj
platform/ios/Runner/: Info.plist
platform/ohos/AppScope/: app.json5
platform/ohos/AppScope/resources/base/element/: string.json
platform/ohos/entry/src/main/resources/base/element/: string.json
resource/locales/ar/: app.ftl
resource/locales/en/: app.ftl
resource/locales/fr/: app.ftl
resource/locales/zh-CN/: app.ftl
scripts/: live-check.yaml  weather.yaml
src/: icons.rs  lib.rs  main.rs  settings.rs  ui.rs  weather.rs
